--- a/src/style.scss
+++ b/src/style.scss
@@ -68,6 +68,18 @@
             margin-bottom: 1rem;
         }
         
+        ul,
+        ol {
+          margin: 1em 0;
+          padding: 0 0 0 2em;
+        }
+        ul {
+          list-style-type: disc;
+        }
+        li p:last-child {
+          margin: 0
+        }
+        
         ol ol,
         ul ul,
         ol ul,
@@ -88,7 +100,7 @@
             padding: 0 1em;
             color: var(--secondary-text-color);
             border-left: 0.25em solid var(--border-color);
-            
+            margin-bottom: 8px;
             > :first-child {
                 margin-top: 0;
             }
@@ -387,7 +399,7 @@
         padding: 0 1em;
         color: var(--secondary-text-color);
         border-left: 0.25em solid var(--border-color);
-        
+        margin-bottom: 8px;
         > :first-child {
             margin-top: 0;
         }
